# drdro-software-f4

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RESUME.md  config.ini  pyproject.toml  shell.nix
.github/workflows/: ci.yml  deploy-static.yml  release.yml
docs/: migration_design.md  migration_todo.md
dro/: app.py  feeds.py  main.py  profiles.py
dro/comms/: __init__.py  protocol_client.py  updater.py  ymodem.py
dro/components/: manager.py
dro/components/home/: coordbar.kv  coordbar.py  dro_coordbar.kv  dro_coordbar.py  dro_mode_layout.py  els_mode_layout.kv  els_mode_layout.py  elsbar.kv  elsbar.py  fw_update_banner.kv  fw_update_banner.py  home_toolbar.kv  home_toolbar.py  index_mode_layout.py  jog_mode_layout.py  jogbar.kv  jogbar.py  mode_layout.py  servobar.kv  servobar.py  statusbar.kv  statusbar.py
dro/components/plot/: circle_popup.kv  circle_popup.py  coords_overlay.py  float_view.kv  float_view.py  line_popup.kv  line_popup.py  plot_screen.kv  plot_screen.py  plot_toolbar.kv  plot_toolbar.py  rect_popup.kv  rect_popup.py  scene.py
dro/components/popups/: feeds_table_popup.py  help_popup.kv  help_popup.py  keypad.py  mode_popup.py  ssid_popup.kv  ssid_popup.py
dro/components/screens/: axes_setup_screen.kv  axes_setup_screen.py  axis_screen.kv  axis_screen.py  color_picker_screen.py  els_setup_screen.kv  els_setup_screen.py  firmware_screen.kv  firmware_screen.py  font_picker_screen.py  formats_screen.kv  formats_screen.py  home_screen.kv  home_screen.py  input_screen.kv  input_screen.py  inputs_setup_screen.kv  logs_screen.kv  (+20 more)
dro/dispatchers/: axis.py  board.py  circle_pattern.py  els.py  formats.py  input.py  line_pattern.py  rect_pattern.py  saving_dispatcher.py  servo.py
dro/help/: angle_degrees.rst  axis_name.rst  axis_position_tolerance.rst  beep_on_approach.rst  colors.rst  display_font.rst  els_axis_roles.rst  els_mode.rst  enable_wifi.rst  encoder_filter.rst  error_reporting.rst  font_size.rst  format_digits.rst  lead_screw_pitch.rst  network_connection.rst  position_tolerance.rst  scale_input.rst  scales.rst  servo_acceleration.rst  servo_gearing.rst  servo_max_speed.rst  software_update.rst  spindle_mode.rst  sync_ratio.rst  system_storage.rst  transform_type.rst  units_per_turn.rst  volume.rst  weights.rst
dro/utils/: beeper.py  constants.py  ctype_calc.py  encoder_filter.py  fw_compat.py  tone.py
templates/: .release_notes.md.j2
tests/: conftest.py  test_feeds_custom.py  test_profiles.py
tests/comms/: test_protocol_client.py
tests/components/: test_els_custom_feed.py  test_els_servo_sync.py  test_els_spindle_display.py  test_positioning_aid.py
tests/dispatchers/: test_board.py  test_servo.py
tests/utils/: test_encoder_filter.py  test_fw_compat.py
website/: README.md  develop.html  features.html  flash.html  index.html  reference.html  screenshots.html
(+25 files in other folders)
