[project]
name = "drdro-software"
version = "1.1.0"
description = "drDRO host software — Kivy DRO/controller UI for the drDRO rotary-controller board (RS485 line protocol)"
authors = [
    { name = "Stefano Bertelli", email = "stefano.bertelli@thinkalpha.io" }
]
requires-python = ">=3.10,<4.0"
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "cachetools>=5.5.0",
    "certifi>=2024.0.0",
    "keke>=0.1.4",
    "kivy>=2.3.0",
    "pyserial>=3.5",
    "pydantic>=2.10.3",
    "pyyaml>=6.0.2",
    "nmcli>=1.5.0",
    "aiohttp>=3.9.0",
    "sentry-sdk>=2.32.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
    "python-semantic-release>=9.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dro"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
patch_without_tag = true
branch = "main"
hvcs = "github"
remove_dist = false
upload_to_pypi = false
build_command = "uv build"
prerelease = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"
